# unistringxx

./: .gitignore  CMakeLists.txt  README  config.h.in  version.txt
doc/: Doxyfile
include/unistringxx/: common.hpp  core.hpp  uchar  uchar.hpp  unichar.hpp  unicore.hpp  unistring  unistring.hpp  ustring.hpp  utils.hpp
src/: empty
test/: core_test.cpp  header_compile.cpp  uchar_test.cpp  unichar_test.cpp  unicore_test.cpp  unistring_test.cpp  ustring_test.cpp
